--- a/src/Formee/Clients/Clients.Web.Components/Components/Cards/FmCard.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Components/Cards/FmCard.razor
@@ -18,10 +18,10 @@
     public string Classes { get; set; }
 
     [Parameter]
-    public RenderFragment FmHeader { get; set; }
+    public RenderFragment? FmHeader { get; set; }
 
     [Parameter]
-    public RenderFragment FmBody { get; set; }
+    public RenderFragment? FmBody { get; set; }
 
     [Parameter]
     public bool IsHoverable { get; set; }
