--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Containers/View.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Containers/View.razor
@@ -13,11 +13,11 @@
 
 <FmSpacer/>
 
-@if (ContainersService.Containers != null)
+@if (AppState.Containers.ContainersCollection != null)
 {
     <FmTab OnTabChange="HandleContainerChangeEvent">
         <FmTabItems>
-            @foreach (var container in ContainersService.Containers)
+            @foreach (var container in AppState.Containers.ContainersCollection)
             {
                 <FmTabItem Id="@container.Id">
                     <Header>
