--- a/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
+++ b/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
@@ -282,3 +282,9 @@ h1:focus {
     border: none;
     box-shadow: var(--box-shadow-sm);
 }
+
+.fm-avatar__profile {
+    height: 200px;
+    width: 200px;
+    border-radius: 10px;
+}
