--- a/src/Formee/Clients/Clients.Web.Components/Shared/MainLayout.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
             {
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
                            Content="Home">
-                    <FmLink Route="@($"?userId={AppState.Identity.User.Id}")"
+                    <FmLink Route="@($"?user_id={AppState.Identity.User.Id}")"
                             ActiveClass="fm-link__active"
                             Text="Home"
                             Classes="fm-link d-flex justify-content-center mb-3"
@@ -56,7 +56,7 @@
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
                            Content="My Profile">
-                    <FmLink Route="@($"{Routes.Identity}?userId={AppState.Identity.User.Id}")"
+                    <FmLink Route="@($"{Routes.Identity}?user_id={AppState.Identity.User.Id}")"
                             ActiveClass="fm-link__active"
                             Text="Identity Management"
                             Classes="fm-link d-flex justify-content-center mb-3"
