--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using Syncfusion.Blazor.Buttons;
 @using Syncfusion.Blazor.Spinner;
 @using Syncfusion.Blazor.Layouts;
+@using Syncfusion.Blazor.Calendars;
 @using Syncfusion.Blazor.DropDowns;
 @using Syncfusion.Blazor.Navigations;
 @using Syncfusion.Blazor.SplitButtons;
