configure admins dashboard

--- a/src/Formee/Clients/Admin.Web/_Imports.razor
+++ b/src/Formee/Clients/Admin.Web/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Admin.Web
-@using Admin.Web.Shared
+
+@using Clients.Web.Components.Components.Typography
+@using Clients.Web.Components.Pages.Admins.Shared
