--- a/src/Formee/Clients/Admin.Web/Pages/_Host.cshtml
+++ b/src/Formee/Clients/Admin.Web/Pages/_Host.cshtml
@@ -13,6 +13,12 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="Admin.Web.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" defer
+            type="text/javascript"></script>
+
+    <link href="_content/Clients.Web.Components/css/app.css" rel="stylesheet" />
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
