--- a/src/Formee/Clients/Web.Components/Pages/Admins/Shared/AdminsLayout.razor
+++ b/src/Formee/Clients/Web.Components/Pages/Admins/Shared/AdminsLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Admin.Web</PageTitle>
+<PageTitle>Admins Dashboard</PageTitle>
 
 <div class="page">
     <div class="sidebar">
